--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "orangehrm",
+  "name": "orange-cucumber",
   "version": "1.0.0",
   "description": "",
-  "main": "cypress.config.js",
+  "main": "index.js",
   "scripts": {
     "test": "test",
     "allure:report": "allure generate allure-results --clean -o TaskReports/Phase1",
     "3llawi": "npx cypress run --browser chrome --spec cypress/e2e/orangeHRM/generate-employee-report.cy.ts --env allure=true && npm run allure:report",
     "AhmadMohsen": "npx cypress run --spec cypress/e2e/orangeHRM/generate-employee-report.cy.ts --record --key c2a800fb-8215-4abd-91fe-6338a9183b10"
   },
-  "author": "",
+  "author": "Ayman Attili",
   "license": "ISC",
   "devDependencies": {
     "@cypress/grep": "^4.0.0",
